--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -14,13 +14,14 @@
     "published": "Jan 1, 2018 5:18:39 PM",
     "tags": [
       "DBG:surround``remot 3W onli",
+      "DBG_TECH1:k/t/w:animation/gamedev/8",
       "DBG_TECH1:k/t/w:ios/apple/8",
       "DBG_TECH1:k/t/w:ios/mobile/8",
       "DBG_TECH1:k/t/w:layout/frontend/5",
       "DBG_TECH1:k/t/w:spring/java/8",
       "DBG_TECH1:k/t/w:swift/apple/5",
       "DBG_TECH1:k/t/w:swift/mobile/8",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=16, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=13, java=8, gamedev=0, php=0, embedded=0, frontend=5}",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=16, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=13, java=8, gamedev=8, php=0, embedded=0, frontend=5}",
       "REMOTE1/100",
       "TECH1/apple",
       "TECH1/mobile",
@@ -283,11 +284,11 @@
       "DBG_TECH1:k/t/w:objective-c/apple/9",
       "DBG_TECH1:k/t/w:objective-c/c/6",
       "DBG_TECH1:k/t/w:objective-c/mobile/24",
-      "DBG_TECH1:k/t/w:phonegap/gamedev/3",
+      "DBG_TECH1:k/t/w:phonegap/gamedev/2",
       "DBG_TECH1:k/t/w:phonegap/mobile/8",
       "DBG_TECH1:k/t/w:swift/apple/5",
       "DBG_TECH1:k/t/w:swift/mobile/8",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=11, mobile=48, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=34, java=5, gamedev=3, php=0, embedded=0, frontend=10}",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=11, mobile=48, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=34, java=5, gamedev=2, php=0, embedded=0, frontend=10}",
       "Full Time",
       "HTML5 & CSS3",
       "Java",
