--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,33 @@
 {
  "items": [
   {
+    "id": "fbHwA1Z3QdSigGF-FDePJw",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "hackernews",
+    "url": "https://news.ycombinator.com/item?id=16740918",
+    "title": "Breaker is a social podcast software company. Learn more at https://www.breaker.audio/i/about.",
+    "content": "<div>                  <span>Breaker is a social podcast software company. Learn more at <a href='https://www.breaker.audio/i/about' rel='nofollow'>https://www.breaker.audio/i/about</a>.<p>We are currently looking to hire two people:</p><p>1. A full-time senior iOS developer, preferably ONSITE in San Francisco, but open to REMOTE.</p><p>2. A part-time community manager, starting at ~10 hours per week, with an opportunity to scale with the company. REMOTE friendly. Must love podcasts.</p><p>More information at <a href='https://www.breaker.audio/i/jobs' rel='nofollow'>https://www.breaker.audio/i/jobs</a>.</p><p>Please send inquiries to jobs@breaker.audio<span>              </span></p><div>        <p>                      <u></u>                        </p></div></span></div>",
+    "urlFetchPending": false,
+    "published": "Apr 3, 2018 4:00:07 AM",
+    "tags": [
+      "REMOTE1/50",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote"
+    ],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ]
+  },
+  {
     "id": "DegpMcJqQMqGMj3AGLHG5A",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
@@ -409,33 +436,6 @@
       "TZ/unknown"
     ],
     "tagsNames1": [],
-    "tagsNames2": [
-      "apple",
-      "mobile"
-    ]
-  },
-  {
-    "id": "JfvAwRDnR8iLZmelSEVX4A",
-    "source": {
-      "contentTransform": "TEXT_STRIP_FORMATTING",
-      "jobAdContentRegExp": ""
-    },
-    "sourceName": "wfh.io",
-    "url": "https://www.wfh.io/jobs/4077-senior-ios-engineer-bread",
-    "title": "Senior iOS Engineer @ Bread",
-    "content": "<h2>              Senior iOS Engineer<small> @ Bread</small>          </h2><dl>          <dt></dt>          <dd><p></p></dd>          <dt></dt>          <dd><p>2018-01-08 03:42</p></dd>          <dt><span>Description</span></dt>          <dd><p>We are looking for an experienced iOS engineer to join our mobile team to help us build the best crypto currency experience in the world. Our vision is to decentralize banking and bring the power of financial services to everyone in the world, including the nearly 2 billion adults that to this day remain unbanked.</p><p><strong>iOS at Bread</strong></p><p>Bread started out on iOS so the Apple ecosystem is in our blood. Originally, our entire Bitcoin stack was written from scratch in Objective-C. We've since evolved our business and product significantly, however iOS remains core to our ability to execute on our vision. We're not a mobile-first company, we're mobile-only. Our mobile apps are the only way our customers interact with Bread, so we take great pride in our apps.</p><p>The Bread app on iOS is responsible for securing billions of USD worth of digital assets, and that number continues to grow every day. We're growing our iOS team so we can expand our product portfolio and support our rapidly growing iOS customer base.</p><p><strong>What we're doing at Bread</strong></p><p>Bread is at the heart of a financial revolution. We're building the missing piece of infrastructure that ties together the essential functionality of a bank, but where individuals retain complete control over their assets. As a a financial infrastructure company, our mission is unlikely to ever be complete. We need continually strive to bring the power of our apps to new regions of the world, some of which have never had wide access to banking functionality.</p><p>Our approach to this problem heavily focuses on several core tenants. For one, we will never have direct control or visibility over customer funds. It is not our job to interfere in the personal financial lives of our customers. This is accomplished by using digital assets like Bitcoin, and a mobile app like ours which manages its assets on-device.</p><p>The second tenant of our approach is to provide integration with the traditional financial system. Regardless of the currency, people still need to get paid, pay their bills, pay for goods at merchants, and send money to their family and friends. We are building infrastructure that integrates with local financial businesses that tie in with local currencies and adhere to local laws.</p><p>Finally, we need to fight for a quality consumer experience. This is why we try to retain control over every moment of our customer's interaction with our products. We relentlessly design, redesign, test, and experiment to ensure our customers have a positive, safe experience.</p><p><strong>What it's like to work here</strong></p><p>We've built a lively remote work culture that emphasizes regular personal interaction. At Bread, we started as a remote team and have built our workflows around it. This allows us to hire people who want to work with us, regardless of where they've decided to settle (or roam). </p><p>Work-life balance is important to everyone at Bread, and we strive to ensure everyone has enough time for family, exercise, and mental health. In our opinion, a happy and healthy team is an essential ingredient to finding creative solutions to the hard problems we're trying to solve.</p><p>We're more operationally transparent than you may be used to. The entire Bread team has access to a variety of dashboards that help our distributed team make better decisions. If you have a question that can't be answered by a dashboard or an easy query, let's see if we can fix that.</p><p>Bread is committed to building an actively inclusive work environment that makes our team an excellent home for everyone—regardless of gender, sexual orientation, ethnicity, race, education, age, or other personal characteristics.</p><p><strong>Requirements</strong></p><p>There are no hard requirements, so if you see something listed here that you're unsure about, please don't hesitate to ask!</p><ul><li>5+ years of software engineering experience</li><li>Confidence working in the iOS ecosystem: Xcode, debugging</li><li>Some experience with Swift</li><li>Ability to write unit tests, integration tests</li><li>Knowledge of web technologies: APIs, HTTP, JSON, etc</li><li>A desire to learn and grow your skills</li><li>You value your attention to detail</li></ul><p>Nice to haves:</p><ul><li>Experience with C and embedded development is a big plus</li><li>Crypto currency experience will help you get up to speed quicker</li><li>Graphics programming and animations</li></ul><p>You should include these in your application:</p><ul><li>Resume and LinkedIn profile</li><li>Links to code samples on Github, Gitlab, etc</li></ul></dd>          <dt></dt>            <dd>              <p>                              </p>            </dd>          <dt><span>Country</span></dt>          <dd><p>Anywhere*</p></dd>            <dt><span>Location</span></dt>            <dd><p>USA/Canada/Mexico</p></dd>        </dl>",
-    "urlFetchPending": false,
-    "published": "Jan 8, 2018 5:42:15 AM",
-    "tags": [
-      "REMOTE1/100",
-      "TECH1/apple",
-      "TECH1/mobile",
-      "TITLE1/dev",
-      "TZ/America"
-    ],
-    "tagsNames1": [
-      "American time zones"
-    ],
     "tagsNames2": [
       "apple",
       "mobile"
