--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,10 @@ markdown: kramdown
 
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
-#
-title : <small>100% </small><strong>remote&nbsp;jobs</strong>
-tagline: All remote jobs in one place
+title : <strong>metajob</strong>
+tagline: About the remote job
 author :
-  name : Dmitri Dmitri
+  name : Dmitri Geller
 #  email : blah@email.test
 #  github : username
 #  twitter : username
