--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ markdown: kramdown
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 title : <strong>metajob</strong>
-tagline: About the remote job
+tagline: all remote jobs in one place
 author :
   name : Dmitri Geller
 #  email : blah@email.test
