--- a/_config.yml
+++ b/_config.yml
@@ -109,9 +109,9 @@ JB :
   analytics :
     provider : google
     google :
-        tracking_id : 'UA-***'
+        tracking_id : 'UA-117928562-1'
     googleUA :
-        tracking_id : 'UA-***'
+        tracking_id : 'UA-117928562-1'
         property_name : 'PROPERTY NAME'
     getclicky :
       site_id : 
