--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ author :
 #
 production_url : http://metajob.org
 
+plugins:
+  - jekyll-sitemap
+
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
 JB :
