--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ markdown: kramdown
 
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
-title : <strong>metajob</strong>
+title : meta<strong>job</strong>
 tagline: all remote jobs in one place
 author :
   name : Dmitri Geller
