--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,14 @@
 # this is index of a node having the subnodes (node containing "developers/technology stacks")
 jobnav_developers_node : 0
 
+# see _data/jobnav.yml
+# Tech jobs For techies who are not developers
+jobnav_tech_node : 1
+
+# see _data/jobnav.yml
+# Non-tech jobs "Remote" is not only for engineers!
+jobnav_nontech_node : 2
+
 # This is the default format.
 # For more see: http://jekyllrb.com/docs/permalinks/
 permalink: /:categories/:year/:month/:day/:title
