--- a/_data/jobnav.yml
+++ b/_data/jobnav.yml
@@ -1,5 +1,5 @@
-- title:
-  tagline: Remote developer jobs per tecnhology stack&#58;
+- title: '&nbsp;Developer jobs<small>For each technology stack</small>'
+  tagline:
   undertagline:
   url:
   datafile:
@@ -9,174 +9,189 @@
     - title: Remote frontend (JavaScript) jobs
       tagline: HTML/JavaScript and everything else running in browser
       undertagline: "Includes: HTML/CSS and JavaScript which runs in browser (AngularJS, React and similar technologies). <br/>Excludes: Node.js and cross-platform Javascript frameworks like Apache Cordova/PhoneGap"
-      url: remote-frontend-jobs
+      url: /remote-frontend-jobs
       datafile: TECH1_frontend
 
     - title: Remote mobile (iOS, Android) jobs
       tagline: iOS, Android and other mobile tech
       undertagline: "Includes: iOS, Android, Windows Phone, Apache Cordova/PhoneGap, Xamarin and other technologies for mobile apps. <br/>Excludes: backend Java and macOS programming"
-      url: remote-mobile-jobs
+      url: /remote-mobile-jobs
       datafile: TECH1_mobile
 
     - title: Remote Java jobs
       tagline: backend Java and Scala
       undertagline: "Includes: backend- and Web-programming with Java and Scala <br/>Excludes: Android programming"
-      url: remote-java-jobs
+      url: /remote-java-jobs
       datafile: TECH1_java
 
     - title: Remote .NET jobs
       tagline: C# and other Microsoft technologies.
       undertagline: "Includes: C# and other .NET languages; VB.NET, ASP.NET, WPF, desktop applications for Windows, Microsoft Azure and other Microsoft technologies. <br/>Excludes: Windows Phone"
-      url: remote-dotnet-jobs
+      url: /remote-dotnet-jobs
       datafile: TECH1_dotnet
 
     - title: Remote (Big) Data or Machine Learning or Scientist jobs
       tagline: statistics, mathematics and algorythms
       undertagline: "Includes: everything related to statistics or mathematics, Big Data, Machine Learning, Data Science. R programming language, Apache Hadoop, Apache Spark. <br/>Excludes: Web programming with Java or Python"
-      url: remote-big-data-science-machine-learning-jobs
+      url: /remote-big-data-science-machine-learning-jobs
       datafile: TECH1_bigdata-ml
 
     - title: Remote Python jobs
       tagline: Django, Flask and others frameworks
       undertagline: "Includes: Django, Flask, SQLAlchemy and other Python frameworks/libraries <br/>Excludes: Python for science"
-      url: remote-python-jobs
+      url: /remote-python-jobs
       datafile: TECH1_python
 
     - title: Remote Ruby jobs
       tagline: Includes Ruby on Rails and other libraries
       undertagline: "Includes: frameworks like Ruby on Rails, Sinatra, RSpec"
-      url: remote-ruby-jobs
+      url: /remote-ruby-jobs
       datafile: TECH1_ruby
 
     - title: Remote Node.js jobs
       tagline: backend JavaScript technologies
       undertagline: "Includes: backend JavaScript technologies like Node.js, Meteor, Express.js. <br/>Excludes: frontend and mobile JavaScript"
-      url: remote-nodejs-jobs
+      url: /remote-nodejs-jobs
       datafile: TECH1_nodejs
 
     - title: "Remote Go, or Golang-related jobs"
       tagline: and related libs
       undertagline: "Includes: everything related to Go programming language"
-      url: remote-go-golang-jobs
+      url: /remote-go-golang-jobs
       datafile: TECH1_go
 
     - title: Remote C/C++ jobs
       tagline: using tools like GCC, glibc, STL
       undertagline: "Includes: technologies like Qt, GCC, glibc, STL, Boost and Assembly language"
-      url: remote-c-plus-plus-jobs
+      url: /remote-c-plus-plus-jobs
       datafile: TECH1_c
 
     - title: Remote PHP jobs
       tagline: frameworks like WordPress, Laravel
       undertagline: "Includes: PHP frameworks like WordPress, Laravel, Symfony, CodeIgniter, Zend"
-      url: remote-php-jobs
+      url: /remote-php-jobs
       datafile: TECH1_php
 
     - title: Remote Apple-related jobs
       tagline: Everything related to Apple, not specifically mobile
       undertagline: "Includes: MacOS, Xcode, Cocoa Touch and other Apple-related technologies <br/>Excludes: iOS, iPhone"
-      url: remote-apple-jobs
+      url: /remote-apple-jobs
       datafile: TECH1_apple
 
     - title: Remote embedded applications/devices jobs
       tagline: Firmware programming, Microcontrollers, Arduino
       undertagline: "Includes: firmware development, microcontroller programming, technologies like Embedded Linux, Arduino, ARM"
-      url: remote-embedded-jobs
+      url: /remote-embedded-jobs
       datafile: TECH1_embedded
 
     - title: Remote gamedev jobs
       tagline: game development, engines like Unity
       undertagline: "Includes: game development, game engines like Unity, Unreal Engine, GameMaker, CryEngine, Cocos2d-x"
-      url: remote-gamedev-jobs
+      url: /remote-gamedev-jobs
       datafile: TECH1_gamedev
 
     - title: "Remote jobs with other technologies"
       tagline: Perl, Clojure, Elixir, Rust ...
       undertagline: "Includes: Perl, Clojure, Elixir, Rust, Shell script, Lisp, Erlang, OCaml, F#"
-      url: remote-other-technologies-jobs
+      url: /remote-other-technologies-jobs
       datafile: TECH1_other
 
-- title: Remote DevOps, Sysadmin, SRE jobs
-  tagline: Site Reliability Engineers, (Linux) System Engineers, Network engineers
-  undertagline: "Includes: DevOps, Site Reliability Engineers (SRE), Linux System Engineers, Cloud Engineers, System administrators, Security Engineers, Operations Engineers, Network engineers Excludes: Support Engineers, Support specialists, CRM Administrators, Software developers"
-  url: remote-devops-sysadmin-sre-jobs
-  datafile: TITLE1_admin
+- title: '&nbsp;Tech jobs<small>For techies who are not developers</small>'
+  tagline:
+  undertagline:
+  url:
+  datafile:
   col: 2
+  subnodes:
 
-- title: Remote QA engineer jobs
-  tagline: Software Quality Assurance (QA), Tester, QA Automation, SDET
-  undertagline: "Includes: Software Quality Assurance (QA) Engineer, Test engineer, QA Automation Engineer, Software Development Engineer in Test (SDET) <br/>Excludes: Software Developer, Programmer, Admin"
-  url: remote-qa-test-engineer-jobs
-  datafile: TITLE1_qa
-  col: 2
+    - title: Remote DevOps, Sysadmin, SRE jobs
+      tagline: Site Reliability Engineers, (Linux) System Engineers, Network engineers
+      undertagline: "Includes: DevOps, Site Reliability Engineers (SRE), Linux System Engineers, Cloud Engineers, System administrators, Security Engineers, Operations Engineers, Network engineers Excludes: Support Engineers, Support specialists, CRM Administrators, Software developers"
+      url: /remote-devops-sysadmin-sre-jobs
+      datafile: TITLE1_admin
+      col: 2
 
-- title: Remote solution engineer (solution architect) jobs
-  tagline: "Solution Engineers and Solution Architects"
-  undertagline: "Includes: Solution Engineers, Solution Architects, Cloud Architects, Security Architects"
-  url: remote-solution-engineer-architect-jobs
-  datafile: TITLE1_solution
-  col: 2
+    - title: Remote QA engineer jobs
+      tagline: Software Quality Assurance (QA), Tester, QA Automation, SDET
+      undertagline: "Includes: Software Quality Assurance (QA) Engineer, Test engineer, QA Automation Engineer, Software Development Engineer in Test (SDET) <br/>Excludes: Software Developer, Programmer, Admin"
+      url: /remote-qa-test-engineer-jobs
+      datafile: TITLE1_qa
+      col: 2
 
-- title: Remote database (RDBMS) developer and admin (DBA) jobs
-  tagline: MySQL/PostgreSQL/Oracle/Redshift Developers and Administrators
-  undertagline: "Includes: MySQL/PostgreSQL/Oracle/Microsoft SQL Server/Amazon Redshift Database Developers and Administrators, Database Automation Engineers <br/>Excludes: backend developers"
-  url: remote-dbms-developer-admin-dba-jobs
-  datafile: TITLE1_dbms
-  col: 2
+    - title: Remote solution engineer (solution architect) jobs
+      tagline: "Solution Engineers and Solution Architects"
+      undertagline: "Includes: Solution Engineers, Solution Architects, Cloud Architects, Security Architects"
+      url: /remote-solution-engineer-architect-jobs
+      datafile: TITLE1_solution
+      col: 2
 
-- title: Remote integration engineer jobs
-  tagline: Implementation Engineers, Build Release Engineers, Automation Developers
-  undertagline: "Includes: Implementation Engineers, Build Release Engineers, Automation Developers, Data Integration Engineers <br/> Excludes: QA engineers, Software developers"
-  url: remote-integration-build-automation-engineer-jobs
-  datafile: TITLE1_integration
-  col: 2
+    - title: Remote database (RDBMS) developer and admin (DBA) jobs
+      tagline: MySQL/PostgreSQL/Oracle/Redshift Developers and Administrators
+      undertagline: "Includes: MySQL/PostgreSQL/Oracle/Microsoft SQL Server/Amazon Redshift Database Developers and Administrators, Database Automation Engineers <br/>Excludes: backend developers"
+      url: /remote-dbms-developer-admin-dba-jobs
+      datafile: TITLE1_dbms
+      col: 2
 
-- title: Remote designer, graphic/video artist jobs
-  tagline: Graphic artists, UI/UX designers, Stylists, Character artists, Background artists, 2d and 3d artists, Animators
-  undertagline: "Includes: Graphic artists, UI/UX designers, Stylists, Character artists, Background artists, 2d and 3d artists, Animators"
-  url: remote-designer-graphic-video-artist-jobs
-  datafile: TITLE1_designer
+    - title: Remote integration engineer jobs
+      tagline: Implementation Engineers, Build Release Engineers, Automation Developers
+      undertagline: "Includes: Implementation Engineers, Build Release Engineers, Automation Developers, Data Integration Engineers <br/> Excludes: QA engineers, Software developers"
+      url: /remote-integration-build-automation-engineer-jobs
+      datafile: TITLE1_integration
+      col: 2
+
+- title: '&nbsp;Non-tech jobs<small>"Remote" is not only for engineers!</small>'
+  tagline: 3
+  undertagline:
+  url:
+  datafile:
   col: 3
+  subnodes:
 
-- title: Remote support specialist jobs
-  tagline: Support Engineers, Customer champions, Support agents, Customer Relationship Management (CRM) Administrators, Microsoft Dynamics CRM administrators
-  undertagline: "Includes: Support Engineers, Customer champions, Support agents, Customer Relationship Management (CRM) Administrators, Microsoft Dynamics CRM administrators"
-  url: remote-customer-support-jobs
-  datafile: TITLE1_support
-  col: 3
+    - title: Remote designer, graphic/video artist jobs
+      tagline: Graphic artists, UI/UX designers, Stylists, Character artists, Background artists, 2d and 3d artists, Animators
+      undertagline: "Includes: Graphic artists, UI/UX designers, Stylists, Character artists, Background artists, 2d and 3d artists, Animators"
+      url: /remote-designer-graphic-video-artist-jobs
+      datafile: TITLE1_designer
+      col: 3
 
-- title: Remote (technical) writer/editor jobs
-  tagline: Content editors, Copywriters, Storytellers, Communication Editors
-  undertagline:  "Includes: Technical Writers, Content editors, Copywriters, Blog Editors, Storytellers, Communication Editors"
-  url: remote-copywriter-editor-jobs
-  datafile: TITLE1_writer
-  col: 3
+    - title: Remote support specialist jobs
+      tagline: Support Engineers, Customer champions, Support agents, Customer Relationship Management (CRM) Administrators, Microsoft Dynamics CRM administrators
+      undertagline: "Includes: Support Engineers, Customer champions, Support agents, Customer Relationship Management (CRM) Administrators, Microsoft Dynamics CRM administrators"
+      url: /remote-customer-support-jobs
+      datafile: TITLE1_support
+      col: 3
 
-- title: Remote marketing, product specialist, SEO jobs
-  tagline: "Product Managers, Content Marketing specialists, Search Engine Optimization(SEO) specialists"
-  undertagline: "Includes: Product Owners, Product Managers, Analysts, Content Marketing specialists, Search Engine Optimization(SEO) specialists"
-  url: remote-marketing-product-seo-jobs
-  datafile: TITLE1_product
-  col: 3
+    - title: Remote (technical) writer/editor jobs
+      tagline: Content editors, Copywriters, Storytellers, Communication Editors
+      undertagline:  "Includes: Technical Writers, Content editors, Copywriters, Blog Editors, Storytellers, Communication Editors"
+      url: /remote-copywriter-editor-jobs
+      datafile: TITLE1_writer
+      col: 3
 
-- title: Remote sales jobs
-  tagline: Sales and pre-sales specialists, Account- and Relationship Managers
-  undertagline: "Includes: Salesperson, Sales Manager, Account Manager, Relationship Management, Business Development specialist"
-  url: remote-sales-jobs
-  datafile: TITLE1_sales
-  col: 3
+    - title: Remote marketing, product specialist, SEO jobs
+      tagline: "Product Managers, Content Marketing specialists, Search Engine Optimization(SEO) specialists"
+      undertagline: "Includes: Product Owners, Product Managers, Analysts, Content Marketing specialists, Search Engine Optimization(SEO) specialists"
+      url: /remote-marketing-product-seo-jobs
+      datafile: TITLE1_product
+      col: 3
 
-- title: Remote manager/executive jobs
-  tagline: Engineering /QA managers, Line managers, Project Managers, Directors and VP
-  undertagline: "Includes: Engineering/QA managers, Delivery managers, Project Managers, Directors and VP, General Managers. Technical Account Managers"
-  url: remote-manager-executive-jobs
-  datafile: TITLE1_manager
-  col: 3
+    - title: Remote sales jobs
+      tagline: Sales and pre-sales specialists, Account- and Relationship Managers
+      undertagline: "Includes: Salesperson, Sales Manager, Account Manager, Relationship Management, Business Development specialist"
+      url: /remote-sales-jobs
+      datafile: TITLE1_sales
+      col: 3
 
-- title: Remote recruiter/HR jobs
-  tagline: and Talent Acquisition specialists
-  undertagline: "Includes: Recruiters, HR, Talent Acquisition specialists"
-  url: remote-hr-recruiter-jobs
-  datafile: TITLE1_HR
-  col: 3
+    - title: Remote manager/executive jobs
+      tagline: Engineering /QA managers, Line managers, Project Managers, Directors and VP
+      undertagline: "Includes: Engineering/QA managers, Delivery managers, Project Managers, Directors and VP, General Managers. Technical Account Managers"
+      url: /remote-manager-executive-jobs
+      datafile: TITLE1_manager
+      col: 3
 
+    - title: Remote recruiter/HR jobs
+      tagline: and Talent Acquisition specialists
+      undertagline: "Includes: Recruiters, HR, Talent Acquisition specialists"
+      url: /remote-hr-recruiter-jobs
+      datafile: TITLE1_HR
+      col: 3
