--- a/_config.yml
+++ b/_config.yml
@@ -89,9 +89,9 @@ JB :
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
   #
-  archive_path: /misc/archive.html
-  categories_path: /misc/categories.html
-  tags_path: /misc/tags.html
+  archive_path: /misc/archive/
+  categories_path: /misc/categories/
+  tags_path: /misc/tags/
   atom_path: /misc/atom.xml
   rss_path: /misc/rss.xml
 
