--- a/_data/jobnav.yml
+++ b/_data/jobnav.yml
@@ -1,5 +1,5 @@
 - title: '&nbsp;Developer jobs<small>For each technology stack</small>'
-  tagline:
+  tagline: 1
   undertagline:
   url:
   datafile:
